Version 3.9.16
- Check environment variable FLEXCC_INCLUDE_PATH for included files
- Better relative path finding for include files thanks to David Betz
- Added register keyword for C
- Moved P2 CLKFREQ and CLKMODE longs down to initial hub memory; fixes a memory corruption issue with coginit/cognew
- Implemented struct initialization for C
- Fixed some bugs in indexing arrays of large types

Version 3.9.15
- Fixed abort/catch in P2
- Fixed a problem with quotes in strings
- Fixed potential name conflict with labels, and improved optimization of branches as a side benefit
- Added -H and -E flags to fastspin to allow changing HUB start address. For example, `fastspin -2 -H 0x10000 -E foo.bas` compiles a program to load and execute at address 65536. If the `-E` is left off then it still loads at 0, but is padded to start executing at 0x10000.
- Added some more C library functions

Version 3.9.14
- Fixed a bug where function parameters to Spin functions without type specifiers could be coerced to the wrong type
- Improved C compatibility of various register declarations
- Implemented __builtin_alloca
- Improved optimization of P2 pin functions
- Support multiple statements per line in BASIC
- Implemented DEFSNG and DEFINT in BASIC
- Added optional xsel parameter to P2 clkset function
- Fixed a bug with types in function closures
- Added dirh_, drvh_, flth_, outh_, and similar functions to Spin in P2 mode

Version 3.9.13
- Fixed runtime to get P2 code running on P2 EVAL boards
- Added _setbaud function to change baud rate
- Allow coginit/cognew of function pointers and functions from other
  objects.
- Fixed the BASIC HEAPSIZE constant.
- Implemented "option base" for BASIC, and made "option base 0" the default
- Added "struct __using" and "__fromfile" to C
- Fixed an optimizer bug which affected some FullDuplexSerialversions
- Fixed a preprocessor bug where defines starting with _ were not expanded
- Fixed "dim shared" syntax to match other dim syntaxes